--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="assets/css/toastr.min.css">
     <link rel="stylesheet" href="assets/semantic/semantic.min.css">
     <!-- endbuild -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
 </head>
 
 <body>
@@ -35,6 +37,7 @@
     <script src="assets/js/html2jade.browserify.js"></script>
     <script src="assets/js/toastr.min.js"></script>
     <script src="assets/js/jade.min.js"></script>
+    <script src="assets/js/riotcontrol.js"></script>
 
     <script src="api.js"></script>
     <script src="i18n.js"></script>
@@ -54,6 +57,8 @@
     <script type="riot/tag" template="jade" src="tags/app-init.jade"></script>
     <!-- @endif -->
 
+
+    <a class="github-fork-ribbon" href="https://github.com/cia48621793/jadevshtml" title="Fork me on GitHub">Fork me on GitHub</a>
     <app-init></app-init>
 
     <script>
